# lights

./: .gitignore  CMakeLists.txt  README.md  config
data/: cube.gltf  deer.glb  deer.gltf  oaktree.gltf  vks_shadow.gltf
inc/: json.hpp  tmath.h  tvec.h
osg/: CMakeLists.txt
osg/anti_alias/: CMakeLists.txt
osg/anti_alias/fxaa/: CMakeLists.txt  main.cpp  testNode.cpp  testNode.h
osg/anti_alias/msaa/: CMakeLists.txt  main.cpp  testNode.cpp  testNode.h
osg/anti_alias/smaa/: AreaTex.h  CMakeLists.txt  main.cpp  smaa.h  smaa_blend.frag  smaa_edge.frag  smaa_weight.frag  testNode.cpp  testNode.h
osg/anti_alias/taa/: CMakeLists.txt  main.cpp  testNode.cpp  testNode.h
osg/anti_alias/taa/glsl/: out_frag.glsl  taa_frag.glsl  vel_frag.glsl  vel_vert.glsl
osg/basic/: CMakeLists.txt
osg/basic-lighting/: CMakeLists.txt  main.cpp  testNode.cpp
osg/basic-material/: CMakeLists.txt  testNode.cpp
osg/basic/interpolation/: CMakeLists.txt  testNode.cpp  testNode.h
osg/inc/: common.h
osg/pbr-ibl/: CMakeLists.txt  main.cpp  testNode.cpp  testNode.h
osg/pbr-ibl-lighting/: CMakeLists.txt  main.cpp  testNode.cpp
osg/pbr-ibl-lighting-rfl/: CMakeLists.txt  main.cpp  testNode.cpp  testNode.h
osg/pbr-ibl-lighting-tex/: CMakeLists.txt  main.cpp  testNode.cpp  testNode.h
osg/pbr-lighting/: CMakeLists.txt  main.cpp  testNode.cpp
osg/pbr-lighting-tex/: CMakeLists.txt  main.cpp  testNode.cpp  testNode.h
osg/sample/: CMakeLists.txt
osg/sample/avg-lum/: CMakeLists.txt  LumNode.cpp  LumNode.h  avglum.frag  avglum.vert  main.cpp  ssrect.frag  ssrect.vert
osg/sample/blend/: BlendNode.cpp  BlendNode.h  CMakeLists.txt  main.cpp
osg/sample/blend1/: BlendNode1.cpp  BlendNode1.h  CMakeLists.txt  main.cpp
osg/sample/blend2/: BlendNode2.cpp  BlendNode2.h  CMakeLists.txt  bavoil2.frag  bavoil_new.frag  bavoil_new.vert  bavoil_new1.frag  bavoil_new_blt.frag  bavoil_new_blt.vert  bavoil_new_blt1.frag  blend.frag  blend.vert  main.cpp  meshkin1.frag  meshkin2.frag
osg/sample/glsl/: basic.vert  blend.frag  blend.vert  noise.glsl
osg/sample/grass/: CMakeLists.txt  GrassNode.cpp  GrassNode.h  grass.comp  grass.frag  grass.tesc  grass.tese  grass.vert  main.cpp  testNode.cpp  testNode.h
osg/sample/noise/: CMakeLists.txt  main.cpp  noise.vert  simplex.frag  testNode.cpp  testNode.h  worley.frag
osg/sample/ssao/: CMakeLists.txt  blur.frag  geom.frag  geom.vert  light.frag  main.cpp  noise.cpp  ssao.frag  ssao.vert  testNode.cpp  testNode.h
osg/sample/volume-cloud/: CMakeLists.txt  VCloudNode.cpp  VCloudNode.h  cloud.frag  cloud.vert  cloud_ds.png.aux.xml  main.cpp  noise.comp  testNode.cpp  testNode.h
test/: CMakeLists.txt  main.cpp
vulkan/: CMakeLists.txt
vulkan/CBFR/: CMakeLists.txt  main.cpp  pbr.frag  pbr.vert
vulkan/TBDR/: CMakeLists.txt  main.cpp  pbr.frag  pbr.vert
vulkan/baselib/: CMakeLists.txt  DepthPass.cpp  DepthPass.h  DepthPersPipeline.cpp  DepthPersPipeline.h  DepthPipeline.cpp  DepthPipeline.h  GLTFLoader.cpp  GLTFLoader.h  HUDPass.cpp  HUDPass.h  HUDPipeline.cpp  HUDPipeline.h  HUDRect.cpp  HUDRect.h  Manipulator.cpp  Manipulator.h  MeshInstance.cpp  MeshInstance.h  MeshPrimitive.cpp  MeshPrimitive.h  PBRPipeline.cpp  PBRPipeline.h  RenderData.h  SimpleShape.h  TexturePipeline.cpp  TexturePipeline.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImGUI.cpp  VulkanImGUI.h  VulkanImage.cpp  VulkanImage.h  VulkanInitializers.hpp  VulkanInstance.cpp  VulkanInstance.h  (+12 more)
vulkan/baselib/imgui/: imgui.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
vulkan/baselib/shaders/: depth.frag  depth.vert  depth_pers.frag  depth_pers.vert  hud.frag  hud.frag.spv  hud.vert  hud.vert.spv  imgui.frag  imgui.frag.spv  imgui.vert  imgui.vert.spv  pbr_clr.frag  pbr_clr.vert  pbr_tex.frag  pbr_tex.vert
vulkan/basic_pbr/: CMakeLists.txt  main.cpp  pbr.frag  pbr.vert
vulkan/shadow/: CMakeLists.txt  MultiSubPass.cc
vulkan/shadow/basic_shadowmap/: CMakeLists.txt  ShadowPipeline.cpp  ShadowPipeline.h  ShadowView.cpp  ShadowView.h  imgui.ini  main.cpp  shadow.frag  shadow.vert
vulkan/shadow/perspective_shadowmap/: CMakeLists.txt  ShadowPipeline.cpp  ShadowPipeline.h  ShadowView.cpp  ShadowView.h  imgui.ini  main.cpp  shadow.frag  shadow.vert
